.openshift/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ui
  name: ui
spec:
  to:
    kind: Service
    name: ui
  wildcardPolicy: None
